--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>404 not found</title>
-  <link rel="stylesheet" href="404.cc">
+  <link rel="stylesheet" href="404.css">
 </head>
 <body>
   <div class="container">
