--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>404</h1>
-    <p>page not found 😔</p>
-    <a href="https://gurt.cc" class="back-link">go back to crazy cattle</a>
+    <p>page not found</p>
+    <a href="https://gurt.cc" class="back-link">back to crazy cattle</a>
   </div>
 </body>
 </html>
