--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Crazy Cattle 3D</title>
+    <script src="script.js" defer></script>
   </head>
   <body style="margin:0;padding:0;overflow:hidden;">
     <iframe src="https://crazy-cattle3d.org/game/crazycattle3d/" style="border:none;width:100vw;height:100vh;"></iframe>
