--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <title>Crazy Cattle 3D</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
   </head>
-  <body style="margin:0;padding:0;overflow:hidden;">
-    <iframe src="https://crazy-cattle3d.org/game/crazycattle3d/" style="border:none;width:100vw;height:100vh;"></iframe>
+  <body>
+    <div class="loader" id="loader">Loading Crazy Cattle 3D...</div>
+    <iframe id="gameFrame" src="https://crazy-cattle3d.org/game/crazycattle3d/"></iframe>
   </body>
 </html>
