--- a/404.html
+++ b/404.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="404.css">
 </head>
 <body>
+  <div class="animated-glow"></div> <!-- glowing background -->
+  
   <div class="container">
     <h1>404</h1>
     <p>page not found</p>
