--- a/stickman/index.html
+++ b/stickman/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stickman.css" />
   </head>
   <body>
-    <div class="loader" id="loader">Loading Stickman Hook...</div>
+    <div class="loader" id="loader">Loading Stickman Hook..</div>
     <iframe
       id="gameFrame"
       src="https://stickman.pro/iframe/index.html"
