--- a/stickman/index.html
+++ b/stickman/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stickman Hook</title>
-    <link rel="stylesheet" href="stickman.css" />
-  </head>
-  <body>
-    <div class="loader" id="loader">Loading Stickman Hook..</div>
-    <iframe
-      id="gameFrame"
-      src="https://stickman.pro/iframe/index.html"
-    ></iframe>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Stickman Game</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://stickman.pro/iframe/index.html" allowfullscreen></iframe>
+</body>
 </html>
