--- a/stickman/index.html
+++ b/stickman/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Stickman Game</title>
+  <link rel="icon" href="icon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
