--- a/links/index.html
+++ b/links/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Link Hub</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
@@ -20,6 +20,6 @@
       <button onclick="addLink()">Add Link</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
