--- a/links/index.html
+++ b/links/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Link Hub</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="animated-glow"></div>
+
   <div class="container">
     <h1>🌐 My Link Hub</h1>
     <div id="link-list">
@@ -14,12 +15,6 @@
       <a href="https://www.youtube.com/@Joontjezoontje" target="_blank">YouTube: @Joontjezoontje</a>
       <a href="https://discord.com/users/1020291952031309845" target="_blank">Discord: @1020291952031309845</a>
     </div>
-    <div class="add-link">
-      <input type="text" id="link-title" placeholder="Link Title" />
-      <input type="url" id="link-url" placeholder="https://example.com" />
-      <button onclick="addLink()">Add Link</button>
-    </div>
   </div>
-  <script src="scripts.js"></script>
 </body>
 </html>
