--- a/links/index.html
+++ b/links/index.html
@@ -9,7 +9,7 @@
   <div class="animated-glow"></div>
 
   <div class="container">
-    <h1>🌐 My Link Hub</h1>
+    <h1>My Link Hub</h1>
     <div id="link-list">
       <a href="https://www.tiktok.com/@imprion" target="_blank">TikTok: @imprion</a>
       <a href="https://www.youtube.com/@Joontjezoontje" target="_blank">YouTube: @Joontjezoontje</a>
