--- a/links/index.html
+++ b/links/index.html
@@ -6,15 +6,15 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="animated-glow"></div>
+  <div class="gradient-bg"></div>
 
-  <div class="container">
-    <h1>My Link Hub</h1>
-    <div id="link-list">
-      <a href="https://www.tiktok.com/@imprion" target="_blank">TikTok: @imprion</a>
-      <a href="https://www.youtube.com/@Joontjezoontje" target="_blank">YouTube: @Joontjezoontje</a>
-      <a href="https://discord.com/users/1020291952031309845" target="_blank">Discord: @1020291952031309845</a>
-    </div>
+  <div class="hub-card">
+    <h1>🔗 My Links</h1>
+    <ul class="link-list">
+      <li><a href="https://www.tiktok.com/@imprion" target="_blank">TikTok: @imprion</a></li>
+      <li><a href="https://www.youtube.com/@Joontjezoontje" target="_blank">YouTube: @Joontjezoontje</a></li>
+      <li><a href="https://discord.com/users/1020291952031309845" target="_blank">Discord: 1020291952031309845</a></li>
+    </ul>
   </div>
 </body>
 </html>
