--- a/snowrider/index.html
+++ b/snowrider/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Snow Rider 3D</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>Snow Rider 3D</h1>
-  <iframe src="https://www.hoodamath.com/mobile/games/snow-rider-3d/game.html?nocheckorient=1" width="800" height="600" frameborder="0" allowfullscreen></iframe>
+  <iframe src="https://www.hoodamath.com/mobile/games/snow-rider-3d/game.html?nocheckorient=1" allowfullscreen></iframe>
 </body>
 </html>
