--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PokiClone</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <body>
   <div class="animated-glow"></div>
 
@@ -8,7 +16,7 @@
 
   <header>
     <div class="logo">PokiClone</div>
-    <div id="search-icon">&#128269;</div> <!-- 🔍 icon -->
+    <div id="search-icon">&#128269;</div>
   </header>
 
   <main>
@@ -21,3 +29,4 @@
 
   <script src="script.js"></script>
 </body>
+</html>
