--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PokiClone</title>
+  <title>Gurt</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
   </div>
 
   <header>
-    <div class="logo">PokiClone</div>
+    <div class="logo">Gurt</div>
     <div id="search-icon">&#128269;</div>
   </header>
 
@@ -24,7 +24,7 @@
   </main>
 
   <footer>
-    <p>© 2025 PokiClone</p>
+    <p>© 2025 Gurt</p>
   </footer>
 
   <script src="script.js"></script>
