--- a/subwaysurfers/index.html
+++ b/subwaysurfers/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://szhong.4399.com/4399swf//upload_swf/ftp35/liuxinyu/20210324/jj01/index.html" allowfullscreen></iframe>
+  <iframe src="https://game3.glov3.me/uploads/game/html5/25439/" allowfullscreen></iframe>
 </body>
 </html>
