--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1>404</h1>
     <p>page not found</p>
-    <a href="https://gurt.cc" class="back-link">back to crazy cattle</a>
+    <a href="https://gurt.cc" class="back-link">Back to homepage</a>
   </div>
 </body>
 </html>
