--- a/website-test/index.html
+++ b/website-test/index.html
@@ -111,18 +111,29 @@
                     <script>
                         // Custom alert function to replace window.alert
                         function customAlert(message) {
+                            // Create backdrop
+                            const backdrop = document.createElement('div');
+                            backdrop.style.cssText = \`
+                                position: fixed;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                background-color: rgba(0, 0, 0, 0.5);
+                                z-index: 999;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                            \`;
+
                             const alertBox = document.createElement('div');
                             alertBox.style.cssText = \`
-                                position: fixed;
-                                top: 50%;
-                                left: 50%;
-                                transform: translate(-50%, -50%);
                                 background-color: #fff;
                                 border: 1px solid #ccc;
                                 padding: 20px;
                                 border-radius: 8px;
                                 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-                                z-index: 1000;
+                                z-index: 1000; /* Higher than backdrop */
                                 display: flex;
                                 flex-direction: column;
                                 align-items: center;
@@ -153,12 +164,71 @@
                             closeButton.onmouseout = () => closeButton.style.backgroundColor = '#007bff';
 
                             closeButton.addEventListener('click', () => {
-                                document.body.removeChild(alertBox);
+                                document.body.removeChild(backdrop); // Remove backdrop when closing
                             });
 
                             alertBox.appendChild(messageText);
                             alertBox.appendChild(closeButton);
-                            document.body.appendChild(alertBox);
+                            backdrop.appendChild(alertBox); // Append alertBox to backdrop
+                            document.body.appendChild(backdrop); // Append backdrop to body
+                        }
+
+                        // Function to display errors within the iframe
+                        function showError(message) {
+                            const errorBox = document.createElement('div');
+                            errorBox.style.cssText = \`
+                                position: fixed;
+                                top: 20px; /* Position at the top for errors */
+                                left: 50%;
+                                transform: translateX(-50%);
+                                background-color: #ffe0e0; /* Light red background */
+                                color: #d32f2f; /* Dark red text */
+                                border: 1px solid #ef9a9a;
+                                padding: 15px 25px;
+                                border-radius: 8px;
+                                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+                                z-index: 1001; /* Higher than alert */
+                                font-family: 'Inter', sans-serif;
+                                font-size: 0.95rem;
+                                display: flex;
+                                align-items: center;
+                                gap: 10px;
+                                max-width: 80%;
+                                text-align: center;
+                            \`;
+
+                            const errorIcon = document.createElement('span');
+                            errorIcon.textContent = '⚠️'; // Warning emoji
+                            errorIcon.style.fontSize = '1.5rem';
+
+                            const errorMessageText = document.createElement('p');
+                            errorMessageText.textContent = 'Error: ' + message;
+
+                            const closeButton = document.createElement('button');
+                            closeButton.textContent = '✖';
+                            closeButton.style.cssText = \`
+                                background: none;
+                                border: none;
+                                color: #d32f2f;
+                                font-size: 1.2rem;
+                                cursor: pointer;
+                                margin-left: auto; /* Push to the right */
+                            \`;
+                            closeButton.addEventListener('click', () => {
+                                document.body.removeChild(errorBox);
+                            });
+
+                            errorBox.appendChild(errorIcon);
+                            errorBox.appendChild(errorMessageText);
+                            errorBox.appendChild(closeButton);
+                            document.body.appendChild(errorBox);
+
+                            // Automatically remove after a few seconds
+                            setTimeout(() => {
+                                if (document.body.contains(errorBox)) {
+                                    document.body.removeChild(errorBox);
+                                }
+                            }, 7000); // Remove after 7 seconds
                         }
 
                         // Override the default alert to use our custom function
@@ -169,11 +239,7 @@
                             ${jsContent}
                         } catch (error) {
                             console.error("Error in user JavaScript:", error);
-                            // Display error in the iframe if possible, or log to console
-                            const errorDiv = document.createElement('div');
-                            errorDiv.style.color = 'red';
-                            errorDiv.textContent = 'JavaScript Error: ' + error.message;
-                            document.body.prepend(errorDiv);
+                            showError(error.message); // Use the new error display function
                         }
                     </script>
                 </body>
