--- a/website-test/index.html
+++ b/website-test/index.html
@@ -54,13 +54,6 @@
             </div>
         </div>
 
-        <div class="flex justify-center mb-6">
-            <button id="run-button"
-                    class="px-8 py-3 bg-gradient-to-r from-blue-500 to-blue-700 text-white font-bold rounded-full shadow-lg hover:from-blue-600 hover:to-blue-800 transition duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">
-                Run Code
-            </button>
-        </div>
-
         <h2 class="text-2xl font-bold text-center text-gray-800 mb-4">Output Preview</h2>
         <div class="bg-gray-200 border border-gray-300 rounded-lg overflow-hidden">
             <iframe id="output-frame" class="w-full h-96 bg-white"></iframe>
@@ -73,7 +66,6 @@
         const cssCode = document.getElementById('css-code');
         const jsCode = document.getElementById('js-code');
         const outputFrame = document.getElementById('output-frame');
-        const runButton = document.getElementById('run-button');
 
         /**
          * Updates the content of the output iframe with the combined HTML, CSS, and JavaScript.
@@ -252,16 +244,18 @@
             outputFrame.contentWindow.document.close();
         }
 
-        // Add event listener to the run button
-        runButton.addEventListener('click', updateOutput);
+        // Add event listeners for real-time updates
+        htmlCode.addEventListener('input', updateOutput);
+        cssCode.addEventListener('input', updateOutput);
+        jsCode.addEventListener('input', updateOutput);
 
-        // Optional: Run code automatically on initial load with default content
+        // Run code automatically on initial load with default content
         window.onload = () => {
             // Set some default content for demonstration
             htmlCode.value = `<h1 class='text-blue-600'>Hello, Live Editor!</h1>\\n<p>Start typing HTML, CSS, and JS to see it rendered here.</p>\\n<button class='bg-green-500 text-white p-3 rounded-lg shadow-md hover:bg-green-600 transition duration-200'>Interactive Button</button>`;
             cssCode.value = `body { background-color: #f0f9ff; }\\n.text-blue-600 { color: #2563eb; }\\nbutton { margin-top: 1rem; }`;
             jsCode.value = `document.querySelector('button').addEventListener('click', () => {\\n  alert('You clicked the button!');\\n});`;
-            updateOutput(); // Render the default content
+            updateOutput(); // Render the default content immediately
         };
     </script>
 </body>
