--- a/website-test/index.html
+++ b/website-test/index.html
@@ -1,262 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Code Editor</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Custom styles for the scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-        body {
-            font-family: 'Inter', sans-serif; /* Using Inter font */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Live Code Editor</title>
+
+  <!-- Prism.js for syntax highlighting -->
+  <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.js"></script>
+
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center p-4">
-    <div class="container mx-auto w-full max-w-6xl bg-white shadow-lg rounded-xl p-6">
-        <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">Live Code Editor</h1>
+<body>
+  <div class="animated-glow"></div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
-            <div class="flex flex-col">
-                <label for="html-code" class="text-lg font-semibold text-gray-700 mb-2">HTML</label>
-                <textarea id="html-code"
-                          class="w-full h-48 md:h-64 p-4 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm font-mono resize-y"
-                          placeholder="&#10;<h1 class='text-blue-600'>Hello, World!</h1>&#10;<button class='bg-blue-500 text-white p-2 rounded'>Click Me</button>"></textarea>
-            </div>
+  <header>
+    <div class="logo">Live Code Editor</div>
+  </header>
 
-            <div class="flex flex-col">
-                <label for="css-code" class="text-lg font-semibold text-gray-700 mb-2">CSS</label>
-                <textarea id="css-code"
-                          class="w-full h-48 md:h-64 p-4 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm font-mono resize-y"
-                          placeholder="/* Your CSS code here */&#10;body {&#10;  font-family: sans-serif;&#10;}&#10;.text-blue-600 {&#10;  color: #2563eb;&#10;}"></textarea>
-            </div>
-
-            <div class="flex flex-col">
-                <label for="js-code" class="text-lg font-semibold text-gray-700 mb-2">JavaScript</label>
-                <textarea id="js-code"
-                          class="w-full h-48 md:h-64 p-4 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm font-mono resize-y"
-                          placeholder="// Your JavaScript code here&#10;document.querySelector('button').addEventListener('click', () => {&#10;  alert('Button clicked!'); // Using alert for demonstration, consider a modal for production&#10;});"></textarea>
-            </div>
+  <main>
+    <div class="editor-container">
+      <div class="editor-row">
+        <div class="editor">
+          <label for="htmlCode">HTML</label>
+          <textarea id="htmlCode" placeholder="Enter your HTML code here..."></textarea>
         </div>
-
-        <h2 class="text-2xl font-bold text-center text-gray-800 mb-4">Output Preview</h2>
-        <div class="bg-gray-200 border border-gray-300 rounded-lg overflow-hidden">
-            <iframe id="output-frame" class="w-full h-96 bg-white"></iframe>
+        <div class="editor">
+          <label for="cssCode">CSS</label>
+          <textarea id="cssCode" placeholder="Enter your CSS code here..."></textarea>
         </div>
+        <div class="editor">
+          <label for="jsCode">JavaScript</label>
+          <textarea id="jsCode" placeholder="Enter your JavaScript code here..."></textarea>
+        </div>
+      </div>
+
+      <div class="preview" id="preview">
+        <iframe id="iframe" src="about:blank"></iframe>
+      </div>
     </div>
+  </main>
 
-    <script>
-        // Get references to the input text areas and the output iframe
-        const htmlCode = document.getElementById('html-code');
-        const cssCode = document.getElementById('css-code');
-        const jsCode = document.getElementById('js-code');
-        const outputFrame = document.getElementById('output-frame');
-
-        /**
-         * Updates the content of the output iframe with the combined HTML, CSS, and JavaScript.
-         */
-        function updateOutput() {
-            // Get the current values from the text areas
-            const htmlContent = htmlCode.value;
-            const cssContent = cssCode.value;
-            const jsContent = jsCode.value;
-
-            // Construct the full HTML document string
-            const fullHtml = `
-                <!DOCTYPE html>
-                <html lang="en">
-                <head>
-                    <meta charset="UTF-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <title>Preview</title>
-                    <style>
-                        /* Inject CSS content */
-                        ${cssContent}
-                    </style>
-                    <script src="https://cdn.tailwindcss.com"></script>
-                    <style>
-                        body {
-                            font-family: 'Inter', sans-serif;
-                            margin: 0;
-                            padding: 1rem;
-                            box-sizing: border-box;
-                        }
-                    </style>
-                </head>
-                <body>
-                    ${htmlContent}
-                    <script>
-                        // Custom alert function to replace window.alert
-                        function customAlert(message) {
-                            // Create backdrop
-                            const backdrop = document.createElement('div');
-                            backdrop.style.cssText = \`
-                                position: fixed;
-                                top: 0;
-                                left: 0;
-                                width: 100%;
-                                height: 100%;
-                                background-color: rgba(0, 0, 0, 0.5);
-                                z-index: 999;
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
-                            \`;
-
-                            const alertBox = document.createElement('div');
-                            alertBox.style.cssText = \`
-                                background-color: #fff;
-                                border: 1px solid #ccc;
-                                padding: 20px;
-                                border-radius: 8px;
-                                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-                                z-index: 1000; /* Higher than backdrop */
-                                display: flex;
-                                flex-direction: column;
-                                align-items: center;
-                                gap: 15px;
-                                max-width: 90%;
-                                text-align: center;
-                                font-family: 'Inter', sans-serif;
-                            \`;
-
-                            const messageText = document.createElement('p');
-                            messageText.textContent = message;
-                            messageText.style.fontSize = '1.1rem';
-                            messageText.style.color = '#333';
-
-                            const closeButton = document.createElement('button');
-                            closeButton.textContent = 'OK';
-                            closeButton.style.cssText = \`
-                                background-color: #007bff;
-                                color: white;
-                                padding: 10px 20px;
-                                border: none;
-                                border-radius: 5px;
-                                cursor: pointer;
-                                font-size: 1rem;
-                                transition: background-color 0.3s ease;
-                            \`;
-                            closeButton.onmouseover = () => closeButton.style.backgroundColor = '#0056b3';
-                            closeButton.onmouseout = () => closeButton.style.backgroundColor = '#007bff';
-
-                            closeButton.addEventListener('click', () => {
-                                document.body.removeChild(backdrop); // Remove backdrop when closing
-                            });
-
-                            alertBox.appendChild(messageText);
-                            alertBox.appendChild(closeButton);
-                            backdrop.appendChild(alertBox); // Append alertBox to backdrop
-                            document.body.appendChild(backdrop); // Append backdrop to body
-                        }
-
-                        // Function to display errors within the iframe
-                        function showError(message) {
-                            const errorBox = document.createElement('div');
-                            errorBox.style.cssText = \`
-                                position: fixed;
-                                top: 20px; /* Position at the top for errors */
-                                left: 50%;
-                                transform: translateX(-50%);
-                                background-color: #ffe0e0; /* Light red background */
-                                color: #d32f2f; /* Dark red text */
-                                border: 1px solid #ef9a9a;
-                                padding: 15px 25px;
-                                border-radius: 8px;
-                                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-                                z-index: 1001; /* Higher than alert */
-                                font-family: 'Inter', sans-serif;
-                                font-size: 0.95rem;
-                                display: flex;
-                                align-items: center;
-                                gap: 10px;
-                                max-width: 80%;
-                                text-align: center;
-                            \`;
-
-                            const errorIcon = document.createElement('span');
-                            errorIcon.textContent = '⚠️'; // Warning emoji
-                            errorIcon.style.fontSize = '1.5rem';
-
-                            const errorMessageText = document.createElement('p');
-                            errorMessageText.textContent = 'Error: ' + message;
-
-                            const closeButton = document.createElement('button');
-                            closeButton.textContent = '✖';
-                            closeButton.style.cssText = \`
-                                background: none;
-                                border: none;
-                                color: #d32f2f;
-                                font-size: 1.2rem;
-                                cursor: pointer;
-                                margin-left: auto; /* Push to the right */
-                            \`;
-                            closeButton.addEventListener('click', () => {
-                                document.body.removeChild(errorBox);
-                            });
-
-                            errorBox.appendChild(errorIcon);
-                            errorBox.appendChild(errorMessageText);
-                            errorBox.appendChild(closeButton);
-                            document.body.appendChild(errorBox);
-
-                            // Automatically remove after a few seconds
-                            setTimeout(() => {
-                                if (document.body.contains(errorBox)) {
-                                    document.body.removeChild(errorBox);
-                                }
-                            }, 7000); // Remove after 7 seconds
-                        }
-
-                        // Override the default alert to use our custom function
-                        window.alert = customAlert;
-
-                        // Inject JavaScript content
-                        try {
-                            ${jsContent}
-                        } catch (error) {
-                            console.error("Error in user JavaScript:", error);
-                            showError(error.message); // Use the new error display function
-                        }
-                    </script>
-                </body>
-                </html>
-            `;
-
-            // Write the constructed HTML to the iframe's document
-            outputFrame.contentWindow.document.open();
-            outputFrame.contentWindow.document.write(fullHtml);
-            outputFrame.contentWindow.document.close();
-        }
-
-        // Add event listeners for real-time updates
-        htmlCode.addEventListener('input', updateOutput);
-        cssCode.addEventListener('input', updateOutput);
-        jsCode.addEventListener('input', updateOutput);
-
-        // Run code automatically on initial load with default content
-        window.onload = () => {
-            // Set some default content for demonstration
-            htmlCode.value = `<h1 class='text-blue-600'>Hello, Live Editor!</h1>\\n<p>Start typing HTML, CSS, and JS to see it rendered here.</p>\\n<button class='bg-green-500 text-white p-3 rounded-lg shadow-md hover:bg-green-600 transition duration-200'>Interactive Button</button>`;
-            cssCode.value = `body { background-color: #f0f9ff; }\\n.text-blue-600 { color: #2563eb; }\\nbutton { margin-top: 1rem; }`;
-            jsCode.value = `document.querySelector('button').addEventListener('click', () => {\\n  alert('You clicked the button!');\\n});`;
-            updateOutput(); // Render the default content immediately
-        };
-    </script>
+  <script src="script.js"></script>
 </body>
 </html>
