--- a/rainbowobby/index.html
+++ b/rainbowobby/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Rainbow Obby</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://785a4295-96c4-43e5-b237-fb07fc3ef44d.poki-gdn.com/c3b6f02d-b886-45aa-b881-4d2e028040c4/index.html></iframe>
+</body>
+</html>
