--- a/g/index.html
+++ b/g/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=https://your-link-here.com">
+    <meta http-equiv="refresh" content="3;url=https://discord.gg/UANC9Mrc8n">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>You are being redirected. If it doesn't happen, <a href="https://your-link-here.com">click here</a>.</p>
+    <p>You are being redirected. If it doesn't happen, <a href="https://discord.gg/UANC9Mrc8n">click here</a>.</p>
 </body>
 </html>
