--- a/fortnite/index.html
+++ b/fortnite/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Penalty Shooters 2</title>
+  <title>Fortnite</title>
   <style>
     html, body {
       margin: 0;
