--- a/run3/index.html
+++ b/run3/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://player03.com/run/3/beta/" allowfullscreen></iframe>
+  <iframe src="https://html5.gamedistribution.com/29f5ccbd364942258803f1ee95c92380/?gdpr-targeting=0&gdpr-tracking=0&gdpr-third-party=0&euConsent=undefined&gd_sdk_referrer_url=https%3A%2F%2Fspele.nl%2Frun-3-spel%2F" allowfullscreen></iframe>
 </body>
 </html>
