--- a/run3/index.html
+++ b/run3/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://html5.gamedistribution.com/29f5ccbd364942258803f1ee95c92380/" allowfullscreen></iframe>
+  <iframe src="https://html5.gamedistribution.com/29f5ccbd364942258803f1ee95c92380/?utm_source=gurt.cc&utm_medium=Run&utm_campaign=block-and-redirect" allowfullscreen></iframe>
 </body>
 </html>
